# forustm

./: .env  .gitignore  Caddyfile  Cargo.toml  README.md  diesel.toml  rustfmt.toml
docker/: Dockerfile  docker-compose.yml  nginx.conf
docs/: architecture.md  getting_start.md  nginx_template.md
migrations/20171004075554_article/: up.sql
migrations/20171004075554_users/: up.sql
migrations/20171004075615_ruser/: down.sql  up.sql
migrations/20171004075615_section/: down.sql  up.sql
migrations/20171004075622_article/: down.sql  up.sql
migrations/20171004075622_comment/: down.sql  up.sql
migrations/20171004075626_comment/: down.sql  up.sql
migrations/20171004075626_section/: up.sql
migrations/2018-01-06-074038_users_custom_css/: down.sql  up.sql
migrations/20180103210155_article_stats/: down.sql  up.sql
src/: articlebiz.rs  commentbiz.rs  dbconn.rs  enkey.rs  forustm_api.rs  forustm_proxy.rs  forustm_web.rs  lib.rs  model.rs  models.rs  schema.rs  sectionbiz.rs  userbiz.rs  util.rs  webpage_server.rs
src/_old/api/: admin_section_api.rs  visitor_api.rs
src/_old/models/: sections.rs
src/_old/util/: redis_pool.rs
src/_old/web/: home.rs  mod.rs  section.rs
src/api/: admin_section_api.rs  admin_user_api.rs  article_api.rs  comment_api.rs  mod.rs  user_api.rs  visitor_api.rs  visitor_article_api.rs  visitor_comment_api.rs
src/db/: mod.rs
src/model/: article.rs  article_stat.rs  article_stats.rs  comment.rs  mod.rs  notify.rs  ruser.rs  section.rs
src/models/: articles.rs  articles_stats.rs  comments.rs  mod.rs  notifys.rs  rusers.rs  sections.rs
src/pages/: article_page.rs  mod.rs
src/proxy/: mod.rs
src/thirdparts/: mod.rs
src/util/: github_information.rs  helper.rs  inner_http.rs  mod.rs  postgresql_pool.rs  redis_pool.rs
src/web/: admin_section.rs  article.rs  home.rs  index.rs  mod.rs  section.rs
static/css/: gruvbox-light.css  home.css  reset_pwd.css
static/js/: global.js  home.js  login.js  reset_pwd.js  tag.js
views/: adminPubNotice.html  adminSection.html  base.html  blogs.html  detailArticle.html  detailSection.html  editArticle.html  footer.html  header.html  home.html  index.html  login.html  reset_password.html  sectionDetail.html
views/modules/: hello.html
