[package]
name = "forustm"
version = "0.1.0"
authors = ["Mike Tang <miketang84@outlook.com>"]

[dependencies]
ammonia = "1.0"
chrono = { version = "0.4", features = [ "serde" ] }
clippy = { version = "*", optional = true }
comrak = "0.2"
diesel = { version = "1.0.0-beta1", features = [ "chrono", "postgres", "uuid"] }
diesel_infer_schema = { version = "1.0.0-beta1", features = [ "postgres" ] }
dotenv = "0.10"
hyper-native-tls = "0.2"
hyper = "0.10"
r2d2 = '0.8'
r2d2_redis = '0.7'
r2d2-diesel = '1.0.0-beta1'
rand = "0.3"
redis = '0.8'
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_urlencoded = "^0.5.1"
sapper = "0.1"
sapper_std = "0.1"
tiny-keccak = "1.3"
uuid = { version = "0.5", features = ["v4", "serde"] }

#[patch.crates-io]
#sapper_std = { git = 'https://github.com/sappworks/sapper_std.git'}
#sapper = { git = 'https://github.com/sappworks/sapper.git' }
