[package]
name = "forustm"
version = "0.1.0"
authors = ["Mike Tang <miketang84@outlook.com>"]

[dependencies]
 dotenv = "^0.10.0"
 serde = "^1.0.17"
 serde_json = "^1.0.5"
 serde_derive = "^1.0.17"
 sapper = "^0.1"
 sapper_std = "^0.1"
 rand = "^0.3.17"
 tiny-keccak = "^1.3.1"
 comrak = "^0.2.4"
 redis = '^0.8.0'
 r2d2 = '^0.8.1'
 r2d2_redis = '^0.7.0'
 r2d2-diesel = '^1.0.0-beta1'
 serde_urlencoded = "^0.5.1"
 ammonia = "^1.0.1"
 reqwest = "^0.8"

[dependencies.diesel]
features = ["postgres", "chrono", "uuid"]
version = "^1.0.0-beta1"

[dependencies.chrono]
features = ["serde"]
version = "^0.4.0"

[dependencies.diesel_infer_schema]
features = ["postgres"]
version = "^1.0.0-beta1"

[dependencies.uuid]
features = ["serde", "v4"]
version = "^0.5.1"

[dependencies.clippy]
optional = true
version = "^0.0.177"

#[patch.crates-io]
#sapper_std = { git = 'https://github.com/sappworks/sapper_std.git'}
#sapper = { git = 'https://github.com/sappworks/sapper.git' }
