[package]
name = "forustm"
version = "0.1.0"
authors = ["Mike Tang <miketang84@outlook.com>"]

[dependencies]
 dotenv = "^0.10.0"
 serde = "^1.0.17"
 serde_json = "^1.0.5"
 serde_derive = "^1.0.17"
 sapper = "^0.1"
 sapper_std = "^0.1"
 rand = "^0.3.17"
 tiny-keccak = "^1.3.1"
 comrak = "^0.2.4"
 redis = '^0.8.0'
 r2d2 = '^0.8.1'
 r2d2_redis = '^0.7.0'
 serde_urlencoded = "^0.5.1"
 ammonia = "^1.0.1"
 hyper-native-tls = "^0.2.4"
 hyper = "^0.10.13"
 sapper_ntd = {git = "https://github.com/DCjanus/sapper_ntd.git" }

[dependencies.diesel]
features = ["postgres", "chrono", "uuid", "r2d2"]
version = "^1.1.1"

[dependencies.chrono]
features = ["serde"]
version = "^0.4.0"

[dependencies.diesel_infer_schema]
features = ["postgres"]
version = "^1.1.0"

[dependencies.uuid]
features = ["serde", "v4"]
version = "^0.6.3" # 需要注意的是，此处依赖的UUID版本号应与diesel相同，否则会出现编译错误，后期升级diesel版本时应注意修改此处

[dependencies.clippy]
optional = true
version = "^0.0.177"

[patch.crates-io]
sapper = { git = "https://github.com/DCjanus/sapper.git" } # for some feature
#sapper_std = { git = 'https://github.com/sappworks/sapper_std.git'}
#sapper = { git = 'https://github.com/sappworks/sapper.git' }
